--- a/css/style.css
+++ b/css/style.css
@@ -2,41 +2,44 @@
     margin: 0 auto;
     box-sizing: border-box;
 }
-body{
-    background-color: rgb(33, 234, 248);
-}
+
 header{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 15px;
-    margin-bottom: 25px;
+    margin-top: 25px;
+    margin-bottom: 35px;
 }
 img{
+    display: flex;
     margin: 0 auto;
-    width: 100px;
-    height: 56px;
+    width: 150px;
+    height: 100px;
 }
 h1{
-   text-align: justify;
+    font-size: 35px;
+    margin-left:190px;
+    text-align: justify;
 
+}
+.logo{
+    width: 100px;
+    height: 56px;
 }
 .container {
     display: block;
     height: 930px;
     max-width: 1775px;
     margin: auto;
-
-
 }
-section{
-    display: flex;
-    margin: 20px auto;
-     
+
+section {
+    display: flex;    
     
 }
 ul, li{
    
+    font-size: 20px;    
     margin: 15px;
     list-style: none;
     align-items: center;
@@ -49,5 +52,11 @@ ul, li{
 button{
     margin: 10px;
     border-radius: 50px;
-    background-color:#ffff;
+    background-color:rgb(113, 174, 253);
 }
+.qtde{
+    display: flex;
+    width: 45px;
+    height: 25px;
+}
+
