--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,17 @@
     --starfleet-blue: #008ffd;
 }
 
-.title, .subtitle, th {
+.title,
+.subtitle,
+th {
     font-family: 'tiny5', sans-serif;
 }
 
-a, p, td, select, input {
+a,
+p,
+td,
+select,
+input {
     font-family: 'Arvo';
 }
 
@@ -58,6 +64,7 @@ main .container {
 .cart {
     width: 90%;
     margin: 0 auto;
+    border-radius: 6px;
     display: flex;
     flex-direction: column;
     background: linear-gradient(100deg, rgba(3, 35, 87, 1) 10%, rgba(0, 95, 166, 1) 34%, rgb(1, 127, 190) 56%, rgba(3, 35, 87, 1) 90%);
@@ -142,27 +149,49 @@ input[type=number] {
 /* ----- DESCRIPTION ----- */
 
 table {
-    width: 80vw;
+    width: 75vw;
 }
 
 tr {
     display: flex;
     flex-direction: row;
-    justify-content: end;
-}
-
-tr {
+    justify-content: center;
     background-color: var(--megaman);
     border-radius: 4px;
 }
 
 th {
-    padding: 10px 40px;
-    margin-left: 8%;
-    font-size: 1.25rem;
+    padding: 10px 0;
+    font-size: 1.35rem;
     color: #ffff;
+    margin:0 10%;   
 }
 
-th.start {
-    margin-right: 20%;
+
+
+tbody {
+    display: flex;
+    flex-direction: column;
+}
+
+td {
+    justify-content: center;
+    position: inherit;
+    font-size: 1.2rem;
+    color: #ffff;
+    padding: 10px 80px;
+    max-width: 400px;
+    align-items: center;
+    text-align: center;
+    margin: 4px auto;
+}
+
+.total {
+    padding: 20px;
+    border-radius: 4px;
+    background-color: var(--megaman);
+    font-weight: 600;
+    color: #ffff;
+    font-size: 1.3rem;
+    margin: 26px 0;
 }
