--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-*{
+/* *{
     margin: 0 auto;
     box-sizing: border-box;
 }
@@ -60,3 +60,23 @@ button{
     height: 25px;
 }
 
+ */
+ *{
+    margin: 0 auto;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    height: 100%;
+}
+.topo{
+    display: flex;
+    
+
+}
+img{
+    margin: 0 auto;
+    width: 100px;
+    height: 100px;
+   text-align: center;
+}
